2006-10-22  Jim Meyering  <jim@meyering.net>

	Version 1.13.

	* NEWS: Record the 6.4 release date.
	* Makefile.maint: Update to work with git.

2006-10-16  Jim Meyering  <jim@meyering.net>

	* bootstrap (slurp): Also update .gitignore if it exists.

2006-10-14  Jim Meyering  <jim@meyering.net>

	* src/system.h (EXIT_FAILURE, EXIT_SUCCESS): Remove definitions.
	Instead, include "exit.h".  This hereby retires the work-around for
	"Sony NEWS-OS Release 4.0C"'s bug due to "#define EXIT_FAILURE 0".

2006-09-21  Jim Meyering  <jim@meyering.net>

	* configure.ac: Require autoconf-2.60 and automake-1.9.6.
	* bootstrap: Import from coreutils.

2006-09-09  Jim Meyering  <jim@meyering.net>

	* configure.ac: Remove GNULIB_AUTOCONF_SNIPPET.
	(AC_INIT): Bump version to 1.13.
	Add AM_GNU_GETTEXT([external]).

	* .x-sc_unmarked_diagnostics: New file.

	* src/system.h: Update from coreutils, with some tiny changes.

	* src/cppi.l: Include "system.h" from %top to avoid redefinition
	warnings about cpp symbols like INT8_MAX that are defined in the
	generated cppi.c.

	* src/Makefile.am (cpp-cond.c): Prepend "#include <config.h>",
	when generating this file.

	* Makefile.cfg (local-checks-to-skip): Skip three of the checks
	that coreutils performs.

	* bootstrap: Update from coreutils.
	* bootstrap.conf: New file.

2005-09-13  Jim Meyering  <jim@meyering.net>

	* Version 1.12.

	* configure.ac: Use gl_EARLY and gl_INIT.
	Remove AC_GNU_SOURCE, gl_USE_SYSTEM_EXTENSIONS, and AM_STDBOOL_H.

	* src/system.h: Don't include pathmax.h
	Include <fcntl.h> and <unistd.h> unconditionally.
	Remove HAVE_DECL_* blocks.

2005-08-31  Jim Meyering  <jim@meyering.net>

	* man/Makefile.am (.x.1): Define PATH so help2man can find cppi.

	* src/cppi.l (pop): Avoid overflow-in-implicit-constant-conversion
	on 64-bit systems.
	("\""): Use %lu, not %d with size_t argument.

2005-05-08  Jim Meyering  <jim@meyering.net>

	* src/cppi.l: Don't include gettext.h -- system.h does that.